use 3box from cdn

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,11 @@
     />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script
+      src="https://cdn.jsdelivr.net/npm/3box@1.8.2/lib/3box.js"
+      integrity="sha256-MnhxhAhf4kl07GWf/BWICuQb8SUwbDbUwTF4X7ZCLv0="
+      crossorigin="anonymous"
+    ></script>
     <title>WalletConnect Pay</title>
   </head>
   <body>
