--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!-- <script src="/3box.min.js"></script> -->
+    <script src="/3box.min.js"></script>
     <title>WalletConnect Pay</title>
   </head>
   <body>
