--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <script src="/3box.min.js"></script>
     <title>WalletConnect Pay</title>
   </head>
-  <body>
+  <body style="background:rgb(234, 235, 238);color:rgb(45, 42, 42)">
     <noscript> You need to enable JavaScript to run this app. </noscript>
     <div id="root"></div>
   </body>
